--- a/.github/workflows/build_qemu.yml
+++ b/.github/workflows/build_qemu.yml
@@ -25,6 +25,26 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Pre-pull Docker image and save archive
+        run: |
+          cd qemu
+          # Determine VM version (fallback to default)
+          VERSION="${{ github.event.inputs.version }}"
+          if [ -z "$VERSION" ]; then
+            VERSION="5.9"
+          fi
+          # Source config to get repository settings
+          . ./config.sh
+          # Pull the accessmod image and extract version
+          docker pull "${AM5_REPO}:${AM5_VERSION_LATEST}"
+          AM5_VERSION=$(docker run --rm --entrypoint="" "${AM5_REPO}:${AM5_VERSION_LATEST}" cat version.txt | tr -d '\r\n')
+          # Ensure fs skeleton directory exists and save image archive
+          mkdir -p fs/home/accessmod
+          docker save "${AM5_REPO}:${AM5_VERSION_LATEST}" -o fs/home/accessmod/docker_image.tar
+          # Export variables for the build step
+          echo "AM5_VERSION=$AM5_VERSION" >> $GITHUB_ENV
+          echo "BUILD_VERSION=$VERSION" >> $GITHUB_ENV
+        shell: bash
 
       - name: Set up Alpine Linux
         uses: jirutka/setup-alpine@v1
