--- a/.github/workflows/build_qemu.yml
+++ b/.github/workflows/build_qemu.yml
@@ -40,7 +40,7 @@ jobs:
           AM5_VERSION=$(docker run --rm --entrypoint="" "${AM5_REPO}:${AM5_VERSION_LATEST}" cat version.txt | tr -d '\r\n')
           # Ensure fs skeleton directory exists and save image archive
           mkdir -p fs/home/accessmod
-          docker save "${AM5_REPO}:${AM5_VERSION_LATEST}" -o fs/home/accessmod/docker_image.tar
+          docker save "${AM5_REPO}:${AM5_VERSION}" -o fs/home/accessmod/docker_image.tar
           # Export variables for the build step
           echo "AM5_VERSION=$AM5_VERSION" >> $GITHUB_ENV
           echo "BUILD_VERSION=$VERSION" >> $GITHUB_ENV
