--- a/.github/workflows/build_qemu.yml
+++ b/.github/workflows/build_qemu.yml
@@ -36,12 +36,15 @@ jobs:
           # Source config to get repository settings
           . ./config.sh
           # Pull the accessmod image and extract version
+          # -> if this the available docker image version is different
+          #    from the version in this  checkout...
           docker pull "${AM5_REPO}:${AM5_VERSION_LATEST}"
           AM5_VERSION=$(docker run --rm --entrypoint="" "${AM5_REPO}:${AM5_VERSION_LATEST}" cat version.txt | tr -d '\r\n')
           # Ensure fs skeleton directory exists and save image archive
           mkdir -p fs/home/accessmod
           docker tag "${AM5_REPO}:${AM5_VERSION_LATEST}"  "${AM5_REPO}:${AM5_VERSION}"
           docker save "${AM5_REPO}:${AM5_VERSION}" -o fs/home/accessmod/docker_image.tar
+          echo "$AM5_VERSION" > fs/home/accessmod/version
           # Export variables for the build step
           echo "AM5_VERSION=$AM5_VERSION" >> $GITHUB_ENV
           echo "BUILD_VERSION=$VERSION" >> $GITHUB_ENV
