--- a/qemu/templates/vm.ovf.template
+++ b/qemu/templates/vm.ovf.template
@@ -1,5 +1,11 @@
 <?xml version="1.0"?>
-<Envelope ovf:version="1.0" xml:lang="en-US" xmlns="http://schemas.dmtf.org/ovf/envelope/1" xmlns:ovf="http://schemas.dmtf.org/ovf/envelope/1" xmlns:rasd="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_ResourceAllocationSettingData" xmlns:vssd="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_VirtualSystemSettingData" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:vbox="http://www.virtualbox.org/ovf/machine">
+<Envelope ovf:version="1.0" xml:lang="en-US"
+  xmlns="http://schemas.dmtf.org/ovf/envelope/1"
+  xmlns:ovf="http://schemas.dmtf.org/ovf/envelope/1"
+  xmlns:rasd="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_ResourceAllocationSettingData"
+  xmlns:vssd="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_VirtualSystemSettingData"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns:vbox="http://www.virtualbox.org/ovf/machine">
   <References>
     <File ovf:id="file1" ovf:href="{{VMDK_FILE}}"/>
   </References>
@@ -100,6 +106,7 @@
           <Order position="4" device="None"/>
         </Boot>
         <Display controller="VMSVGA" VRAMSize="9"/>
+        <Display VRAMSize="10" width="800" height="600"/>
         <RemoteDisplay>
           <VRDEProperties>
             <Property name="TCP/Address" value="127.0.0.1"/>
