ci(workflow): win certs

--- a/electron/electron-builder.yml
+++ b/electron/electron-builder.yml
@@ -17,6 +17,7 @@ win:
   icon: build/icon.png
   target:
     - nsis
+  sign: false
   verifyUpdateCodeSignature: false
   forceCodeSigning: false
 nsis:
