--- a/.github/workflows/accessmod_pipeline.yml
+++ b/.github/workflows/accessmod_pipeline.yml
@@ -84,7 +84,7 @@ jobs:
         run: |
           mkdir -p ./docker-image
           docker pull ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.AM_VERSION }}
-          docker save ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.AM_VERSION }} | gzip ./docker-image/docker_image.tar.gz
+          docker save ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.AM_VERSION }} | gzip > ./docker-image/docker_image.tar.gz
           echo "${{ env.AM_VERSION }}" > ./docker-image/version
 
       - name: Upload Docker image artifact
