--- a/.github/workflows/accessmod_pipeline.yml
+++ b/.github/workflows/accessmod_pipeline.yml
@@ -79,33 +79,41 @@ jobs:
             ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.AM_VERSION }}
             ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.DOCKER_TAG_LATEST }}
 
-      # Save Docker image  - amd64/arm64
-      - name: Save platform-specific Docker images
+  # Save docker image for qemu and electron, per architecture
+  save-artifacts:
+    runs-on: ubuntu-latest
+    needs: [set-version, docker]
+    strategy:
+      matrix:
+        arch: [amd64, arm64]
+    steps:
+      - name: Set version
+        run: echo "AM_VERSION=${{ needs.set-version.outputs.version }}" >> $GITHUB_ENV
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Pull and save image
         run: |
-          mkdir -p ./docker-image-amd64 ./docker-image-arm64
-          docker save --platform="linux/amd64" ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.AM_VERSION }} | gzip -9 > ./docker-image-amd64/docker_image.tar.gz
-          docker save --platform="linux/arm64" ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.AM_VERSION }} | gzip -9 > ./docker-image-arm64/docker_image.tar.gz
-          echo "${{ env.AM_VERSION }}" > ./docker-image-amd64/version
-          echo "${{ env.AM_VERSION }}" > ./docker-image-arm64/version
+          mkdir -p docker-image
+          docker pull --platform linux/${{ matrix.arch }} ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.AM_VERSION }}
+          docker save ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.AM_VERSION }} | gzip -9 > docker-image/docker_image.tar.gz
+          echo "${{ env.AM_VERSION }}" > docker-image/version
 
       - name: Upload Docker image artifact
         uses: actions/upload-artifact@v4
         with:
-          name: docker-image-arm64
-          path: ./docker-image-arm64
-          retention-days: 1
-
-      - name: Upload Docker image artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: docker-image-amd64
-          path: ./docker-image-amd64
+          name: docker-image-${{ matrix.arch }}
+          path: docker-image
           retention-days: 1
 
   # Qemu  : get the docker archive and build the ova
   qemu:
     runs-on: ubuntu-latest
-    needs: [set-version, docker]
+    needs: [set-version, docker, save-artifacts]
     name: Build QEMU VM image
     steps:
       - name: Install dependencies
@@ -156,7 +164,7 @@ jobs:
   # Electron
   update_image:
     runs-on: ubuntu-latest
-    needs: [set-version, docker]
+    needs: [set-version, docker, save-artifacts]
     # Always run on staging and main
     strategy:
       matrix:
